--- a/20230218_13_1.ipynb
+++ b/20230218_13_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqggDok4pa/w3PX9Z5Kno7",
+      "authorship_tag": "ABX9TyOuvY7eZwIZPwL6GmHHA7Ml",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "QIs_sp_12yYA",
-        "outputId": "24950f03-70f5-47b9-8160-7f633d78c553"
+        "outputId": "c48bbd21-a4e2-4187-d31b-b63e392a7d9a"
       },
       "outputs": [
         {
@@ -47,46 +47,65 @@
             "\n",
             "\n",
             " --------------------------------------------------------------------\n",
-            " | R | Q | R | R | R | T | R | U |\n",
+            " | Q | T | Q | R | T | Q | T | S |\n",
             " --------------------------------------------------------------------\n",
-            " | U | U | Q | U | R | S | T | U |\n",
+            " | Q | Q | Q | S | R | S | U | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | Q | U | T | S | S | S | S | S |\n",
+            " | T | R | S | S | T | S | U | S |\n",
             " --------------------------------------------------------------------\n",
-            " | S | S | Q | S | U | Q | S | Q |\n",
+            " | U | T | Q | T | U | T | R | U |\n",
             " --------------------------------------------------------------------\n",
-            " | S | Q | T | T | R | Q | Q | R |\n",
+            " | T | T | U | Q | R | T | S | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | U | R | T | S | Q | T | T | R |\n",
+            " | U | T | U | R | T | R | U | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | S | U | S | S | U | R | U | R |\n",
+            " | U | U | U | Q | R | Q | R | T |\n",
             " --------------------------------------------------------------------\n",
-            " | R | R | U | Q | U | T | Q | S |\n",
+            " | Q | T | T | S | R | U | R | U |\n",
             " --------------------------------------------------------------------\n",
-            "Enter move: c5u\n",
-            "Updating board ...\n",
-            "Swapping Pieces\n",
-            "Removing Pieces\n",
+            "Enter move: a1u\n",
             "\n",
             "\n",
             "\n",
             "\n",
             " --------------------------------------------------------------------\n",
-            " | R | Q | R | R | R | T | R | U |\n",
+            " | R | T | U | R | T | Q | T | S |\n",
             " --------------------------------------------------------------------\n",
-            " | U | U | Q | U | R | S | T | U |\n",
+            " | Q | T | Q | S | R | S | U | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | Q | U | Q | S | S | S | S | S |\n",
+            " | T | R | S | S | T | S | U | S |\n",
             " --------------------------------------------------------------------\n",
-            " | S | S | T | S | U | Q | S | Q |\n",
+            " | U | T | Q | T | U | T | R | U |\n",
             " --------------------------------------------------------------------\n",
-            " | S | Q | T | T | R | Q | Q | R |\n",
+            " | T | T | U | Q | R | T | S | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | U | R | T | S | Q | T | T | R |\n",
+            " | U | T | U | R | T | R | U | Q |\n",
             " --------------------------------------------------------------------\n",
-            " | S | U | S | S | U | R | U | R |\n",
+            " | Q | U | U | Q | R | Q | R | T |\n",
             " --------------------------------------------------------------------\n",
-            " | R | R | U | Q | U | T | Q | S |\n",
+            " | U | T | T | S | R | U | R | U |\n",
+            " --------------------------------------------------------------------\n",
+            "Enter move: a1u\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " --------------------------------------------------------------------\n",
+            " | R | S | R | R | T | Q | T | S |\n",
+            " --------------------------------------------------------------------\n",
+            " | R | T | U | S | R | S | U | Q |\n",
+            " --------------------------------------------------------------------\n",
+            " | Q | T | Q | S | T | S | U | S |\n",
+            " --------------------------------------------------------------------\n",
+            " | T | R | S | T | U | T | R | U |\n",
+            " --------------------------------------------------------------------\n",
+            " | U | T | Q | Q | R | T | S | Q |\n",
+            " --------------------------------------------------------------------\n",
+            " | T | T | U | R | T | R | U | Q |\n",
+            " --------------------------------------------------------------------\n",
+            " | U | T | U | Q | R | Q | R | T |\n",
+            " --------------------------------------------------------------------\n",
+            " | Q | T | T | S | R | U | R | U |\n",
             " --------------------------------------------------------------------\n"
           ]
         },
@@ -97,9 +116,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-d384443a4a4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mContinueGame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoalscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m   \u001b[0;31m# Go through one round of the game\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m   \u001b[0mDoRound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-8-d384443a4a4f>\u001b[0m in \u001b[0;36mDoRound\u001b[0;34m()\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m   \u001b[0;31m# Get move from user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 178\u001b[0;31m   \u001b[0mmove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGetMove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m   \u001b[0;31m# Update game based on move\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-8-d384443a4a4f>\u001b[0m in \u001b[0;36mGetMove\u001b[0;34m()\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mGetMove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0;31m#Get move from user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m   \u001b[0mmove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter move: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-f5e6fde8861e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mContinueGame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoalscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m   \u001b[0;31m# Go through one round of the game\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 258\u001b[0;31m   \u001b[0mDoRound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    259\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-f5e6fde8861e>\u001b[0m in \u001b[0;36mDoRound\u001b[0;34m()\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m   \u001b[0;31m# Get move from user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m   \u001b[0mmove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGetMove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m   \u001b[0;31m# Update game based on move\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-f5e6fde8861e>\u001b[0m in \u001b[0;36mGetMove\u001b[0;34m()\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mGetMove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0;31m#Get move from user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m   \u001b[0mmove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter move: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m             )\n\u001b[0;32m--> 860\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 904\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    905\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -224,7 +243,6 @@
         "\n",
         "def SwapPieces(board, move):\n",
         "  # Swap pieces on board according to move\n",
-        "  print(\"Swapping Pieces\")\n",
         "  # Get original position\n",
         "  OrigRow = int(move[1]) - 1\n",
         "  OrigCol = ConvertLetterToCol(move[0])\n",
@@ -273,21 +291,40 @@
         "        remove[i][j+1] = 1;\n",
         "        remove[i][j+2] = 1;\n",
         "\n",
-        "  # Go through each column, looking for 3 in a row of the same\n",
-        "  # If found, mark those three as to be removed\n",
-        "\n",
-        "  return False\n",
+        "  # Eliminate those marked\n",
+        "  global score\n",
+        "  removed_any = False\n",
+        "  for i in range(8):\n",
+        "    for j in range(8):\n",
+        "      if remove[i][j] == 1:\n",
+        "        board[i][j] = 0\n",
+        "        score += 1\n",
+        "        removed_any = True\n",
+        "  return removed_any\n",
         "\n",
         "def DropPieces(board):\n",
         "  #Drop pieces to fill in blanks\n",
-        "  print(\"Dropping Pieces\")\n",
+        "  for j in range(8):\n",
+        "    # make list of pieces in the column\n",
+        "    listofpieces = []\n",
+        "    for i in range(8):\n",
+        "      if board[i][j] != 0:\n",
+        "        listofpieces.append(board[i][j])\n",
+        "    # copy the list into column\n",
+        "    for i in range(len(listofpieces)):\n",
+        "      board[i][j] = listofpieces[i]\n",
+        "    # fill in remainder of colum with 0s\n",
+        "    for i in range(len(listofpieces), 8):\n",
+        "      board[i][j] = 0\n",
         "\n",
         "def FillBlanks(board):\n",
         "  #Fill blanks with random pieces\n",
-        "  print (\"Filling Blanks\")\n",
+        "  for i in range(8):\n",
+        "    for j in range(8):\n",
+        "      if (board[i][j] == 0):\n",
+        "        board[i][j] = choice(['Q', 'R', 'S', 'T', 'U'])\n",
         "\n",
         "def Update(board, move):\n",
-        "  print(\"Updating board ...\")\n",
         "  # Update the board acording to move\n",
         "  SwapPieces(board, move)\n",
         "  pieces_eliminated = True\n",
